--- a/介绍文档.md
+++ b/介绍文档.md
@@ -19,7 +19,8 @@
 
 ### 人性的探讨：
 
--   故事中探讨了人性的各个层面，包括生存的决心、对失落的承受、对亲情和友情的渴望。
+-   故事中探讨了人性的各个层面，包括生存的决心、对失落的承受、对亲情和友情的渴望。![20230620204953_1](https://github.com/qazplmwsxpkn/123/assets/152022028/4504e9c4-f34b-49bb-82a1-33952fcb993c)
+
 -   与感染者和其他幸存者的冲突，以及不断变化的社会规范，形成了一个残酷而复杂的世界观。
 
 ### 艾莉的秘密：
